force-app/main/default/objects/Tab_Context__c/Tab_Context__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Records to define the Context to be Shown on the Tab, based on the Booth/Product Type</description>
    <label>Tab Context</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Tab Context Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tab Context</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>