force-app/main/default/objects/Tab_Context__c/fields/Booth_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Product_Type__c</fullName>
    <description>Booth Product type are picklist values displayed from global picklist value set of Booth Product Type.</description>
    <label>Booth/Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booth_Product_Type1</valueSetName>
    </valueSet>
</CustomField>