force-app/main/default/objects/Tab_Context__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <description>Look up to Event Tab</description>
    <label>Event Tab</label>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>Tab Context</relationshipLabel>
    <relationshipName>Tab_Context</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>