force-app/main/default/objects/Tab_Context__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>This data to be fetched in Header Section of tab</description>
    <label>Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>