force-app/main/default/objects/Tab_Context__c/fields/Last_Published_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_Number__c</fullName>
    <description>This is used to capture the count of published context</description>
    <label>Last Published Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>