force-app/main/default/objects/Tab_Context__c/fields/Publish_Changes__c.field-meta.xml
<CustomField>
    <fullName>Publish_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To publish the changes whenever there are some changes.</description>
    <label>Publish Changes</label>
    <type>Checkbox</type>
</CustomField>