force-app/main/default/objects/Tab_Context__c/fields/Section_1__c.field-meta.xml
<CustomField>
    <fullName>Section_1__c</fullName>
    <description>Column 1 Section of Tab</description>
    <label>Section 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>