force-app/main/default/objects/Tab_Context__c/fields/Section_2__c.field-meta.xml
<CustomField>
    <fullName>Section_2__c</fullName>
    <description>Column 2 Section of Tab</description>
    <label>Section 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>