force-app/main/default/objects/Tab_Context__c/fields/Section_3__c.field-meta.xml
<CustomField>
    <fullName>Section_3__c</fullName>
    <description>Column 3 Section of Tab</description>
    <label>Section 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>