force-app/main/default/objects/Tab_Context__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Tab__c</columns>
    <columns>Booth_Product_Type__c</columns>
    <columns>Publish_Changes__c</columns>
    <columns>Last_Published_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>